[gd_scene load_steps=6 format=2]

[ext_resource path="res://ClientStream.gd" type="Script" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Lobby.gd" type="Script" id=3]
[ext_resource path="res://Board.tscn" type="PackedScene" id=4]
[ext_resource path="res://WinPanel.gd" type="Script" id=5]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="ClientStream" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Lobby" type="Control" parent="."]
mouse_filter = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Lobby"]
margin_right = 900.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="LobbyPanel" type="Panel" parent="Lobby"]
margin_left = 164.0
margin_top = 146.0
margin_right = 730.0
margin_bottom = 461.0
mouse_filter = 2

[node name="Greeting" type="Label" parent="Lobby"]
margin_left = 347.0
margin_top = 166.0
margin_right = 514.0
margin_bottom = 183.0
text = "Welcome to Speed Game"

[node name="IPLabel" type="Label" parent="Lobby"]
margin_left = 221.0
margin_top = 264.0
margin_right = 344.0
margin_bottom = 278.0
text = "Enter an IP address"

[node name="IPInput" type="LineEdit" parent="Lobby"]
margin_left = 376.0
margin_top = 258.0
margin_right = 493.0
margin_bottom = 282.0
mouse_filter = 1
text = "127.0.0.1"

[node name="Submit" type="Button" parent="Lobby"]
margin_left = 509.0
margin_top = 268.0
margin_right = 634.0
margin_bottom = 296.0
mouse_filter = 1
text = "Connect"

[node name="ServerLabel" type="Label" parent="Lobby"]
margin_left = 229.0
margin_top = 322.0
margin_right = 343.0
margin_bottom = 336.0
text = "Server Response: "

[node name="ServerResponse" type="Label" parent="Lobby"]
margin_left = 364.0
margin_top = 317.0
margin_right = 541.0
margin_bottom = 351.0

[node name="NameLabel" type="Label" parent="Lobby"]
margin_left = 227.0
margin_top = 287.0
margin_right = 328.0
margin_bottom = 301.0
text = "Enter a name:"

[node name="NameInput" type="LineEdit" parent="Lobby"]
margin_left = 376.0
margin_top = 284.0
margin_right = 493.0
margin_bottom = 308.0
mouse_filter = 1

[node name="TestClient" type="Node" parent="."]

[node name="Board" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Win" type="Control" parent="."]
visible = false
margin_right = 900.0
margin_bottom = 600.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="WinnerPanel" type="Panel" parent="Win"]
margin_left = 242.0
margin_top = 150.0
margin_right = 663.0
margin_bottom = 387.0
mouse_filter = 2

[node name="WinnerMessage" type="Label" parent="Win/WinnerPanel"]
margin_left = 142.0
margin_top = 82.0
margin_right = 290.0
margin_bottom = 96.0
text = "Player Won the Game"

[node name="Exit Message" type="Label" parent="Win/WinnerPanel"]
margin_left = 141.0
margin_top = 99.0
margin_right = 279.0
margin_bottom = 113.0
text = "Thank you for playing!"

[node name="NewGame" type="Button" parent="Win/WinnerPanel"]
margin_left = 150.0
margin_top = 143.0
margin_right = 259.0
margin_bottom = 173.0
text = "New Game"

[connection signal="serverData" from="ClientStream" to="." method="_on_ClientStream_serverData"]
[connection signal="pressed" from="Lobby/Submit" to="Lobby" method="_on_Submit_pressed"]
[connection signal="pressed" from="Win/WinnerPanel/NewGame" to="Win" method="_on_NewGame_pressed"]
